# Smart-Speaker-

./: README.md
app/: readme.md
docs/: readme.md
player/: CMakeLists.txt  build.sh  main.cpp  readme.md
player/audio/: audio.c  main
player/control_led/: led.c  makefile  send.sh
player/inc/: epoll.hpp  mode_mngr.hpp  playback.hpp  thread_pool.hpp  wav.hpp
player/src/: epoll.cpp  mode_mngr.cpp  playback.cpp  thread_pool.cpp
player/toolchain/: arm-linux-gnueabihf.cmake
server/: readme.md
